--- a/style.css
+++ b/style.css
@@ -12,7 +12,42 @@ body {
     height: 100vh; /* Preenche a altura total da viewport */
     margin: 0;
     padding: 0;
+
+    	margin: 0;
+	height: 100vw;
+	width: 100vw;
+    
 }
+
+.search-box{
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	
+	background: #fff;
+	height: 50px;
+	padding: 10px;
+	border-radius: 10px;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.search-text{
+	
+	background: none;
+	border: 0;
+	outline: 0;
+	font-size: 16px;
+}
+
+.loupe-white{
+	display: none;
+}
+
 
 
 /* Estiliza os títulos h1 */
